Fixed scrollbar on add series

--- a/NzbDrone.Web/_backboneApp/Content/base.css
+++ b/NzbDrone.Web/_backboneApp/Content/base.css
@@ -39,6 +39,7 @@ body {
 
 .nz-center {
     text-align: center;
+    overflow: hidden;
 }
 
 .nz-center .typeahead {
